--- a/MyBackendService/MyBackendService.csproj
+++ b/MyBackendService/MyBackendService.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.8.18" />
     <PackageReference Include="Hangfire.AspNetCore" Version="1.8.18" />
+    <PackageReference Include="Hangfire.MemoryStorage" Version="1.8.1.1" />
+    <!-- <PackageReference Include="Hangfire.MemoryStorage.Core" Version="1.4.0" /> -->
     <PackageReference Include="Hangfire.SqlServer" Version="1.8.18" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.15" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
